--- a/coverflow.css
+++ b/coverflow.css
@@ -5,11 +5,13 @@
 	overflow: hidden;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	-webkit-text-size-adjust: none;
+	-ms-text-size-adjust: none;
 	-webkit-touch-callout: none;
 	-webkit-transition: opacity .7s;
 	-moz-transition: opacity .7s;
 	-ms-transition: opacity .7s;
 	-o-transition: opacity .7s;
+	transition: opacity .7s;
 }
 
 .coverflow .coverflow-wrap {
@@ -35,6 +37,7 @@
 	-moz-transition: -moz-transform .8s cubic-bezier(0.190,1.000,0.220,1.000);
 	-ms-transition: -ms-transform .8s cubic-bezier(0.190,1.000,0.220,1.000);
 	-o-transition: -o-transform .8s cubic-bezier(0.190,1.000,0.220,1.000);
+	transition: transform .8s cubic-bezier(0.190,1.000,0.220,1.000);
 }
 
 .coverflow .coverflow-cell canvas {
@@ -45,6 +48,7 @@
 	-moz-transition: opacity .7s;
 	-ms-transition: opacity .7s;
 	-o-transition: opacity .7s;
+	transition: opacity .7s;
 }
 
 .coverflow-text {
@@ -54,6 +58,7 @@
 	-moz-transition: opacity .7s;
 	-ms-transition: opacity .7s;
 	-o-transition: opacity .7s;
+	transition: opacity .7s;
 	width: 100%;
 }
 
