--- a/coverflow.css
+++ b/coverflow.css
@@ -20,7 +20,9 @@
   overflow: hidden; }
 
 .coverflow .coverflow-wrap,
-.coverflow .coverflow-tray {
+.coverflow .coverflow-tray,
+.coverflow .coverflow-rect {
+  position: absolute;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
@@ -36,6 +38,10 @@
   -ms-transition: -ms-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
   -o-transition: -o-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
   transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1); }
+
+.coverflow .coverflow-hit {
+  position: absolute;
+  opacity: 0; }
 
 .coverflow .coverflow-cell canvas {
   outline: 1px solid transparent;
