--- a/scss/coverflow.scss
+++ b/scss/coverflow.scss
@@ -20,7 +20,6 @@
 	overflow: hidden;
 }
 
-.coverflow .coverflow-wrap,
 .coverflow .coverflow-tray,
 .coverflow .coverflow-rect {
 	position: absolute;
@@ -41,6 +40,7 @@
 .coverflow .coverflow-hit {
 	position: absolute;
 	opacity: 0;
+	-webkit-backface-visibility: hidden;
 }
 
 .coverflow .coverflow-cell canvas {
