--- a/coverflow.css
+++ b/coverflow.css
@@ -1,17 +1,11 @@
 .coverflow {
   z-index: 10;
   position: relative;
-  opacity: 1;
   overflow: hidden;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-text-size-adjust: none;
   -ms-text-size-adjust: none;
-  -webkit-touch-callout: none;
-  -webkit-transition: opacity .7s;
-  -moz-transition: opacity .7s;
-  -ms-transition: opacity .7s;
-  -o-transition: opacity .7s;
-  transition: opacity .7s; }
+  -webkit-touch-callout: none; }
 
 .coverflow .coverflow-wrap {
   position: absolute;
@@ -55,23 +49,11 @@
 .coverflow .coverflow-cell canvas {
   pointer-events: none;
   outline: 1px solid transparent;
-  position: absolute;
-  opacity: 1;
-  -webkit-transition: opacity .7s;
-  -moz-transition: opacity .7s;
-  -ms-transition: opacity .7s;
-  -o-transition: opacity .7s;
-  transition: opacity .7s; }
+  position: absolute; }
 
 .coverflow-text {
   position: absolute;
-  opacity: 1;
-  width: 100%;
-  -webkit-transition: opacity .7s;
-  -moz-transition: opacity .7s;
-  -ms-transition: opacity .7s;
-  -o-transition: opacity .7s;
-  transition: opacity .7s; }
+  width: 100%; }
 
 .coverflow-text h1,
 .coverflow-text h2 {
